Renamed the login to sign up and added a login section

--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
                 <li><a href="Index.html"><span>HOME</span></a></li>
                 <li><a href="Portfolio.html">PORTFOLIO</a></li>
                 <li><a href="Contact.html">ABOUT</a></li>
-                <li><a href="Login.html">LOGIN</a></li>
+                <li><a href="Signup.html">SIGN UP</a></li>
             </ul>
         </div>
     </header>
@@ -21,11 +21,15 @@
 <a href="https://www.facebook.com/"><img src="FB.png" alt="FB link"></a>
 <a href=""><img src="Call.png" alt="Cell link"></a>
 
+    <h3>Basic Website</h3>
+    <p>My first website, which is based on <strong>HTML</strong> and <strong>CSS</strong>.</p>
+
     <p>
         <form action="" method="post">
-            
-            <input type="text" name="first name" placeholder="First name">
-            <input type="text" name="first name" placeholder="Comment">
+            <input type="text" name="Login" placeholder="Login">
+            <input type="password" name="Password" placeholder="Password">            
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="comment" placeholder="Comment">
             <input type="submit">
         </form>
 
