--- a/Portfolio.html
+++ b/Portfolio.html
@@ -61,7 +61,7 @@
                 <li><a href="Index.html"><span>HOME</span></a></li>
                 <li><a href="Portfolio.html">PORTFOLIO</a></li>
                 <li><a href="Contact.html">ABOUT</a></li>
-                <li><a href="Login.html">LOGIN</a></li>
+                <li><a href="Signup.html">SIGN UP</a></li>
             </ul>
         </div>
     </header>
