--- a/Signup.html
+++ b/Signup.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>Signup</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Style.css" type="text/css">
 </head>
